using UnityEngine;

public static class AnimatorTexts 
{
    public static readonly int Speed = Animator.StringToHash("Speed");
    public static readonly int Attack = Animator.StringToHash("Attack");
    public static readonly int DieTrigger = Animator.StringToHash("DieTrigger");
    public static readonly int AttackValue = Animator.StringToHash("AttackValue");
}
